--- a/src/go/k8s/config/crd/kustomization.yaml
+++ b/src/go/k8s/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/redpanda.vectorized.io_clusters.yaml
 - bases/redpanda.vectorized.io_consoles.yaml
+- bases/redpanda.vectorized.io_redpanda.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -11,12 +12,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_clusters.yaml
 #- patches/webhook_in_consoles.yaml
+#- patches/webhook_in_redpanda.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_clusters.yaml
 #- patches/cainjection_in_consoles.yaml
+#- patches/cainjection_in_redpanda.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
