chore: add buckets and gitrepositories to list

--- a/src/go/k8s/config/rbac/role.yaml
+++ b/src/go/k8s/config/rbac/role.yaml
@@ -287,6 +287,30 @@ rules:
 - apiGroups:
   - source.toolkit.fluxcd.io
   resources:
+  - buckets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - source.toolkit.fluxcd.io
+  resources:
+  - gitrepositories
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - source.toolkit.fluxcd.io
+  resources:
   - helmcharts
   verbs:
   - create
