--- a/src/go/k8s/config/crd/kustomization.yaml
+++ b/src/go/k8s/config/crd/kustomization.yaml
@@ -2,8 +2,10 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
+- bases/fluxcd.resources.yaml
 - bases/redpanda.vectorized.io_clusters.yaml
 - bases/redpanda.vectorized.io_consoles.yaml
+- bases/redpanda.vectorized.io_redpandas.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
