fix: slight name change to full-name-override

--- a/src/go/k8s/config/crd/bases/redpanda.vectorized.io_redpandas.yaml
+++ b/src/go/k8s/config/crd/bases/redpanda.vectorized.io_redpandas.yaml
@@ -138,7 +138,7 @@ spec:
                     required:
                     - enabled
                     type: object
-                  fullnameOverride:
+                  fullNameOverride:
                     description: FullnameOverride is the override to give your redpanda
                       release
                     type: string
