chore: events fixed and refactor creation of repositories

--- a/src/go/k8s/config/crd/bases/redpanda.vectorized.io_redpandas.yaml
+++ b/src/go/k8s/config/crd/bases/redpanda.vectorized.io_redpandas.yaml
@@ -832,6 +832,8 @@ spec:
                 type: array
               helmRelease:
                 type: string
+              helmRepository:
+                type: string
               installFailures:
                 format: int64
                 type: integer
