chore: fixed updated and events

--- a/src/go/k8s/config/crd/bases/redpanda.vectorized.io_redpandas.yaml
+++ b/src/go/k8s/config/crd/bases/redpanda.vectorized.io_redpandas.yaml
@@ -845,8 +845,12 @@ spec:
                 type: integer
               helmRelease:
                 type: string
+              helmReleaseReady:
+                type: boolean
               helmRepository:
                 type: string
+              helmRepositoryReady:
+                type: boolean
               installFailures:
                 format: int64
                 type: integer
