--- a/src/go/k8s/config/manager/kustomization.yaml
+++ b/src/go/k8s/config/manager/kustomization.yaml
@@ -12,5 +12,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: vectorized/redpanda-operator
-  newName: localhost/redpanda
-  newTag: dev
+  newName: vectorized/redpanda-operator
+  newTag: latest
